charon/tests/ui/simple/box-dyn-fnonce.out
error: trying to access the allocator field from Box, but it is being treated as a builtin (without allocator)
 --> /rustc/library/alloc/src/boxed.rs:2277:51

note: the error occurred when translating `alloc::boxed::{impl core::ops::function::FnOnce<Args> for alloc::boxed::Box<F, A>[TraitClause1, TraitClause2]}::call_once`, which is (transitively) used at the following location(s):
 --> tests/ui/simple/box-dyn-fnonce.rs:4:5
  |
4 |     f();
  |     ---
error: trying to access the allocator field from Box, but it is being treated as a builtin (without allocator)
 --> /rustc/library/alloc/src/boxed.rs:1958:17

note: the error occurred when translating `alloc::boxed::{impl core::ops::drop::Drop for alloc::boxed::Box<T, A>[TraitClause0, TraitClause1]}::drop`, which is (transitively) used at the following location(s):
 --> tests/ui/simple/box-dyn-fnonce.rs:4:5
  |
4 |     f();
  |     ---
error: trying to access the allocator field from Box, but it is being treated as a builtin (without allocator)
 --> /rustc/library/core/src/ptr/mod.rs:825:1

note: the error occurred when translating `alloc::boxed::Box::{impl core::marker::Destruct for alloc::boxed::Box<T, A>[TraitClause0, TraitClause1]}::drop_in_place`, which is (transitively) used at the following location(s):
 --> tests/ui/simple/box-dyn-fnonce.rs:4:7
  |
4 |     f();
  |       -
5 | }
  | -
ERROR Charon failed to translate this code (3 errors)
